--- a/index.html
+++ b/index.html
@@ -175,6 +175,41 @@
                 </div>
             </div>
         </section>
+
+        <section class="atividades"> 
+            <div class="container-fluid">
+                <div class="row align-items-center">
+                    <div class="col-5 p-5">
+                        <h3 class="display-3 h3-atividades">Atividades</h3>
+                        <p class="p-atividades">Descubra sorrisos e participação ativa, conheça as vibrantes atividades que realizamos com os idosos. Junte-se a nós na construção de momentos significativos e cheios de alegria!</p>
+                        <p class="p-atividades">Arrasta para o lado!</p>
+                    </div>
+                    <div class="col-7 p-0">
+                        <div id="carouselExample" class="carousel slide">
+                            <div class="carousel-inner">
+                                <div class="carousel-item active">
+                                    <img src="./img/Group 3.png" class="d-block w-100" alt="...">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="..." class="d-block w-100" alt="...">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="..." class="d-block w-100" alt="...">
+                                </div>
+                            </div>
+                            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+                                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                <span class="visually-hidden">Previous</span>
+                            </button>
+                            <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+                                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                <span class="visually-hidden">Next</span>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
