--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                         <div id="carouselExample" class="carousel slide">
                             <div class="carousel-inner">
                                 <div class="carousel-item active">
-                                    <img src="./img/Group 3.png" class="d-block w-100" alt="...">
+                                    <img src="./img/carrossel-1.png" class="d-block w-100" alt="...">
                                 </div>
                                 <div class="carousel-item">
                                     <img src="..." class="d-block w-100" alt="...">
@@ -205,6 +205,46 @@
                                 <span class="carousel-control-next-icon" aria-hidden="true"></span>
                                 <span class="visually-hidden">Next</span>
                             </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section>
+            <div class="container  mt-5 mb-5">
+                <div class="row d-flex">
+                    <div class="col mb-3">
+                        <h1 class="h1-nossa-equipe">Nossa Equipe</h1>
+                    </div>
+                    <div class="col d-flex align-items-center gap-4">
+                        <div class="card card-equipe border-0 rounded-4" style="width: 18rem;">
+                            <img src="./img/equipe-1.png" class="card-img-top p-2 pb-0" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title text-white">Bruna Silva</h5>
+                                <p class="card-text text-white">Psicóloga</p>
+                            </div>
+                        </div>
+                        <div class="card card-equipe border-0 rounded-4" style="width: 18rem;">
+                            <img src="./img/equipe-2.png" class="card-img-top p-2 pb-0" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title text-white">Marina Santana</h5>
+                                <p class="card-text text-white">Fisioterapeuta</p>
+                            </div>
+                        </div>
+                        <div class="card card-equipe border-0 rounded-4" style="width: 18rem;">
+                            <img src="./img/equipe-3.png" class="card-img-top p-2 pb-0" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title text-white">Felipe Andrade</h5>
+                                <p class="card-text text-white">Secretário</p>
+                            </div>
+                        </div>
+                        <div class="card card-equipe border-0 rounded-4" style="width: 18rem;">
+                            <img src="./img/equipe-4.png" class="card-img-top p-2 pb-0" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title text-white">Laura Costa</h5>
+                                <p class="card-text text-white">Voluntária</p>
+                            </div>
                         </div>
                     </div>
                 </div>
