--- a/index.html
+++ b/index.html
@@ -188,13 +188,16 @@
                         <div id="carouselExample" class="carousel slide">
                             <div class="carousel-inner">
                                 <div class="carousel-item active">
-                                    <img src="./img/carrossel-1.png" class="d-block w-100" alt="...">
+                                    <img src="./img/carrossel-1.png" class="d-block w-100" alt="Roda de Conversas">
                                 </div>
                                 <div class="carousel-item">
-                                    <img src="..." class="d-block w-100" alt="...">
+                                    <img src="./img/carrossel-2.png" class="d-block w-100" alt="Fisioterapia">
                                 </div>
                                 <div class="carousel-item">
-                                    <img src="..." class="d-block w-100" alt="...">
+                                    <img src="./img/carrossel-3.png" class="d-block w-100" alt="Sessões de Filmes">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="./img/carrossel-4.png" class="d-block w-100" alt="Jogos">
                                 </div>
                             </div>
                             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
