--- a/index.html
+++ b/index.html
@@ -191,10 +191,13 @@
                                     <img src="./img/carrossel-1.png" class="d-block w-100" alt="...">
                                 </div>
                                 <div class="carousel-item">
-                                    <img src="..." class="d-block w-100" alt="...">
+                                    <img src="./img/carrossel-2.png" class="d-block w-100" alt="...">
                                 </div>
                                 <div class="carousel-item">
-                                    <img src="..." class="d-block w-100" alt="...">
+                                    <img src="./img/carrossel-3.png" class="d-block w-100" alt="...">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="./img/carrossel-4.png" class="d-block w-100" alt="...">
                                 </div>
                             </div>
                             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
