--- a/index.html
+++ b/index.html
@@ -175,17 +175,77 @@
                 </div>
             </div>
         </section>
-
+        <!--projetos-->
+        <section>
+            <div class="container pb-3 mt-5 mb-5">
+                <div class="row mb-4">
+                    <div class="col text-center">
+                        <h1 class="title-brown display-4">Projetos Ativos</h1>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col">
+                        <div id="carouselProjetos" class="carousel slide">
+                            <div class="carousel-inner">
+                                <div class="carousel-item active">
+                                    <div class="d-flex gap-4 justify-content-center">
+                                        <div class="card card-projetos border-0 rounded-4 align-items-center" style="width: 15rem;">
+                                            <img src="./img/projetos.png" class="card-img-top w-75 p-2 pb-0 rounded-circle" alt="...">
+                                            <div class="card-body">
+                                                <h3 class="card-title text-center title-card-atividades">Nome Projeto</h3>
+                                                <p class="card-text p-card-atividades">Breve descrição Breve descrição Breve descrição Breve descrição</p>
+                                            </div>
+                                        </div>
+                                        <div class="card card-projetos border-0 rounded-4 align-items-center" style="width: 15rem;">
+                                            <img src="./img/projetos.png" class="card-img-top w-75 p-2 pb-0 rounded-circle" alt="...">
+                                            <div class="card-body">
+                                                <h3 class="card-title title-card-atividades text-center">Nome Projeto</h3>
+                                                <p class="card-text p-card-atividades">Breve descrição Breve descrição Breve descrição Breve descrição</p>
+                                            </div>
+                                        </div>
+                                        <div class="card card-projetos border-0 rounded-4 align-items-center" style="width: 15rem;">
+                                            <img src="./img/projetos.png" class="card-img-top p-2 pb-0 w-75 rounded-circle" alt="...">
+                                            <div class="card-body">
+                                                <h3 class="card-title text-center title-card-atividades">Nome Projeto</h3>
+                                                <p class="card-text p-card-atividades">Breve descrição Breve descrição Breve descrição Breve descrição</p>
+                                            </div>
+                                        </div>
+                                        <div class="card card-projetos border-0 rounded-4 align-items-center" style="width: 15rem;">
+                                            <img src="./img/projetos.png" class="card-img-top w-75 p-2 pb-0 rounded-circle" alt="...">
+                                            <div class="card-body">
+                                                <h3 class="card-title text-center title-card-atividades">Nome Projeto</h3>
+                                                <p class="card-text p-card-atividades">Breve descrição Breve descrição Breve descrição Breve descrição</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="carousel-item">
+                                </div>
+                            </div>
+                            <button class="carousel-control-prev" type="button" data-bs-target="#carouselProjetos" data-bs-slide="prev" disabled>
+                                <span class="carousel-control-prev-icon me-5" aria-hidden="true"></span>
+                                <span class="visually-hidden">Previous</span>
+                            </button>
+                            <button class="carousel-control-next" type="button" data-bs-target="#carouselprojetos" data-bs-slide="next" disabled>
+                                <span class="carousel-control-next-icon ms-5" aria-hidden="true"></span>
+                                <span class="visually-hidden">Next</span>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!--atividades-->
         <section class="atividades"> 
             <div class="container-fluid">
                 <div class="row align-items-center">
                     <div class="col-5 p-5">
-                        <h3 class="display-3 h3-atividades">Atividades</h3>
+                        <h3 class="display-3 title-brown">Atividades</h3>
                         <p class="p-atividades">Descubra sorrisos e participação ativa, conheça as vibrantes atividades que realizamos com os idosos. Junte-se a nós na construção de momentos significativos e cheios de alegria!</p>
                         <p class="p-atividades">Arrasta para o lado!</p>
                     </div>
                     <div class="col-7 p-0">
-                        <div id="carouselExample" class="carousel slide">
+                        <div id="carouselAtividades" class="carousel slide">
                             <div class="carousel-inner">
                                 <div class="carousel-item active">
                                     <img src="./img/carrossel-1.png" class="d-block w-100" alt="Roda de Conversas">
@@ -200,11 +260,11 @@
                                     <img src="./img/carrossel-4.png" class="d-block w-100" alt="Jogos">
                                 </div>
                             </div>
-                            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+                            <button class="carousel-control-prev" type="button" data-bs-target="#carouselAtividades" data-bs-slide="prev">
                                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                                 <span class="visually-hidden">Previous</span>
                             </button>
-                            <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+                            <button class="carousel-control-next" type="button" data-bs-target="#carouselAtividades" data-bs-slide="next">
                                 <span class="carousel-control-next-icon" aria-hidden="true"></span>
                                 <span class="visually-hidden">Next</span>
                             </button>
@@ -215,7 +275,7 @@
         </section>
 
         <section>
-            <div class="container  mt-5 mb-5">
+            <div class="container mt-5 mb-5">
                 <div class="row d-flex">
                     <div class="col mb-3">
                         <h1 class="h1-nossa-equipe">Nossa Equipe</h1>
