--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                         <img src="./img/cacto.png" alt="cacto vetor" class="img-fluid" width="250" height="180">
                     </div>
                     <div class="col-8 mt-5 mb-5">
-                        <h1 class="h1-quem">Quem Somos</h1>
+                        <h1 class="title-green display-3">Quem Somos</h1>
                         <p class="p-quem text-black">O Grupo de Idosos Viver Mais – GIVM, é uma organização da sociedade civil, sem fins lucrativos, que atua na cidade de Arcoverde em Pernambuco desde 2007, em favor das pessoas idosas, residentes nas áreas urbana e rural, que se encontram em situação de vulnerabilidade pessoal e social.</p>
                         <a class="btn btn-primary rounded-5 ps-4 pe-4 pt-2 pb-2 button border-0 fs-5" role="button" data-bs-toggle="modal" data-bs-target="#exampleModal4">Saiba Mais</a>
                     </div>
@@ -273,12 +273,12 @@
                 </div>
             </div>
         </section>
-
+        <!--nossa equipe-->
         <section>
             <div class="container mt-5 mb-5">
                 <div class="row d-flex">
                     <div class="col mb-3">
-                        <h1 class="h1-nossa-equipe">Nossa Equipe</h1>
+                        <h1 class="title-green display-5">Nossa Equipe</h1>
                     </div>
                     <div class="col d-flex align-items-center gap-4">
                         <div class="card card-equipe border-0 rounded-4" style="width: 18rem;">
@@ -314,7 +314,10 @@
             </div>
         </section>
     </main>
+    <!--rodapé-->
+    <footer>
 
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="./js/script.js"></script>
 </body>
