--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Arsenal:wght@400;700&display=swap" rel="stylesheet">
 </head>
-
 <body>
     <nav class="navbar navbar-expand-lg sticky-top bg-light shadow-sm">
         <div class="container">
@@ -71,7 +70,6 @@
             </div>
         </div>
     </div>
-
     <header>
         <div class="container-fluid">
             <div class="row align-items-center header">
@@ -88,7 +86,6 @@
             </div>
         </div>
     </header>
-
     <main>
         <!--quem somos-->
         <section class="bg-white" id="quem-somos">
@@ -239,8 +236,7 @@
                                             <div class="card-body">
                                                 <h3 class="card-title text-center title-card-atividades">Nome Projeto
                                                 </h3>
-                                                <p class="card-text p-card-atividades">Breve descrição Breve descrição
-                                                    Breve descrição Breve descrição</p>
+                                                <p class="card-text p-card-atividades">Breve descrição Breve descrição Breve descrição Breve descrição</p>
                                             </div>
                                         </div>
                                         <div class="card card-projetos border-0 rounded-4 align-items-center"
@@ -250,8 +246,7 @@
                                             <div class="card-body">
                                                 <h3 class="card-title title-card-atividades text-center">Nome Projeto
                                                 </h3>
-                                                <p class="card-text p-card-atividades">Breve descrição Breve descrição
-                                                    Breve descrição Breve descrição</p>
+                                                <p class="card-text p-card-atividades">Breve descrição Breve descrição Breve descrição Breve descrição</p>
                                             </div>
                                         </div>
                                         <div class="card card-projetos border-0 rounded-4 align-items-center"
@@ -261,8 +256,7 @@
                                             <div class="card-body">
                                                 <h3 class="card-title text-center title-card-atividades">Nome Projeto
                                                 </h3>
-                                                <p class="card-text p-card-atividades">Breve descrição Breve descrição
-                                                    Breve descrição Breve descrição</p>
+                                                <p class="card-text p-card-atividades">Breve descrição Breve descrição Breve descrição Breve descrição</p>
                                             </div>
                                         </div>
                                         <div class="card card-projetos border-0 rounded-4 align-items-center"
@@ -389,20 +383,16 @@
                         que construímos há duas décadas.</P>
                 </div>
                 <div class="col ps-5 py-5 d-flex">
-
                     <img src="img/qr-code.svg" alt="">
-
                     <div class="apoia-text pt-5 ps-3">
                         <h2 class="h2-apoia">Pix - QR Code</h2>
-                        <p class="p-apoia">Banco de tal <br>CNPJ - 11.111/0001-11 <br> Nome da Instituição como aparece
-                            no Banco</p>
+                        <p class="p-apoia">Banco de tal <br>CNPJ - 11.111/0001-11 <br> Nome da Instituição como aparece no Banco</p>
                     </div>
                 </div>
                 <div class="col d-inline text-end">
                     <img class="img-fluid" src="img/algas.svg" alt="" width="112" height="158">
                 </div>
             </div>
-
         </section>
     </main>
     <!--rodapé-->
@@ -410,9 +400,8 @@
         <div class="container">
             <div class="row align-items-center py-5">
                 <div class="col-12 col-md-5">
-                    <img class="img-fluid rodape-marca" style="width: 100px;" src="./img/Marca 03.png" alt="Logo marca do Grupo Viver Mais">
-                    <p class="fs-4 pt-3 w-75 rodape-main-text">fortalecendo os vínculos, diminuindo riscos
-                        sociais e celebrando a vida.</p>
+                    <img class="img-fluid rodape-marca" width="100px" src="./img/logo-marca.png" alt="Logo marca do Grupo Viver Mais">
+                    <p class="fs-4 pt-3 w-75 rodape-main-text">fortalecendo os vínculos, diminuindo riscos sociais e celebrando a vida.</p>
                 </div>
                 <div class="col-12 col-md rodape-links pt-4">
                     <h3 class="rodape-text">Links</h3>
@@ -445,5 +434,4 @@
         crossorigin="anonymous"></script>
     <script src="./js/script.js"></script>
 </body>
-
 </html>
