--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Arsenal:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg sticky-top bg-light shadow-sm">
+    <nav class="navbar navbar-expand-lg sticky-top bg-white shadow-sm">
         <div class="container">
             <a class="navbar-brand" href="index.html">
                 <img src="./img/logo.svg" alt="Logo" width="140" height="70">
@@ -234,9 +234,9 @@
                                             <img src="./img/projetos.png"
                                                 class="card-img-top w-75 p-2 pb-0 rounded-circle" alt="...">
                                             <div class="card-body">
-                                                <h3 class="card-title text-center title-card-atividades">Nome Projeto
+                                                <h3 class="card-title text-center title-card-projetos">Nome Projeto
                                                 </h3>
-                                                <p class="card-text p-card-atividades">Breve descrição Breve descrição Breve descrição Breve descrição</p>
+                                                <p class="card-text p-card-projetos">Breve descrição Breve descrição Breve descrição Breve descrição</p>
                                             </div>
                                         </div>
                                         <div class="card card-projetos border-0 rounded-4 align-items-center"
@@ -244,9 +244,9 @@
                                             <img src="./img/projetos.png"
                                                 class="card-img-top w-75 p-2 pb-0 rounded-circle" alt="...">
                                             <div class="card-body">
-                                                <h3 class="card-title title-card-atividades text-center">Nome Projeto
+                                                <h3 class="card-title title-card-projetos text-center">Nome Projeto
                                                 </h3>
-                                                <p class="card-text p-card-atividades">Breve descrição Breve descrição Breve descrição Breve descrição</p>
+                                                <p class="card-text p-card-projetos">Breve descrição Breve descrição Breve descrição Breve descrição</p>
                                             </div>
                                         </div>
                                         <div class="card card-projetos border-0 rounded-4 align-items-center"
@@ -254,9 +254,9 @@
                                             <img src="./img/projetos.png"
                                                 class="card-img-top p-2 pb-0 w-75 rounded-circle" alt="...">
                                             <div class="card-body">
-                                                <h3 class="card-title text-center title-card-atividades">Nome Projeto
+                                                <h3 class="card-title text-center title-card-projetos">Nome Projeto
                                                 </h3>
-                                                <p class="card-text p-card-atividades">Breve descrição Breve descrição Breve descrição Breve descrição</p>
+                                                <p class="card-text p-card-projetos">Breve descrição Breve descrição Breve descrição Breve descrição</p>
                                             </div>
                                         </div>
                                         <div class="card card-projetos border-0 rounded-4 align-items-center"
@@ -264,9 +264,9 @@
                                             <img src="./img/projetos.png"
                                                 class="card-img-top w-75 p-2 pb-0 rounded-circle" alt="...">
                                             <div class="card-body">
-                                                <h3 class="card-title text-center title-card-atividades">Nome Projeto
+                                                <h3 class="card-title text-center title-card-projetos">Nome Projeto
                                                 </h3>
-                                                <p class="card-text p-card-atividades">Breve descrição Breve descrição
+                                                <p class="card-text p-card-projetos">Breve descrição Breve descrição
                                                     Breve descrição Breve descrição</p>
                                             </div>
                                         </div>
@@ -293,16 +293,15 @@
         <!--atividades-->
         <section class="atividades">
             <div class="container-fluid">
-                <div class="row align-items-center">
-                    <div class="col-5 p-5">
-                        <h3 class="display-3 title-brown">Atividades</h3>
-                        <p class="p-atividades">Descubra sorrisos e participação ativa, conheça as vibrantes atividades
-                            que realizamos com os idosos. Junte-se a nós na construção de momentos significativos e
-                            cheios de alegria!</p>
+                <div class="row align-items-center flex-column flex-sm-row">
+                    <div class="col-5 p-md-5 m-0 p-0 mt-4 mb-4 text-atividades">
+                        <h3 class="display-3 title-brown title-atividades">Atividades</h3>
+                        <p class="p-atividades">Descubra sorrisos e participação ativa, conheça as vibrantes atividades que realizamos com os idosos. Junte-se a nós na construção de momentos significativos e cheios de alegria!</p>
                         <p class="p-atividades">Arrasta para o lado!</p>
                     </div>
-                    <div class="col-7 p-0">
-                        <div id="carouselAtividades" class="carousel slide">
+                    <!--carrossel grande e extra grande-->
+                    <div class="col-7 p-0 d-none d-md-block d-lg-block d-xl-block carrossel">
+                        <div id="carouselAtividadesMobile" class="carousel slide">
                             <div class="carousel-inner">
                                 <div class="carousel-item active">
                                     <img src="./img/carrossel-1.png" class="d-block w-100" alt="Roda de Conversas">
@@ -315,6 +314,35 @@
                                 </div>
                                 <div class="carousel-item">
                                     <img src="./img/carrossel-4.png" class="d-block w-100" alt="Jogos">
+                                </div>
+                            </div>
+                            <button class="carousel-control-prev" type="button" data-bs-target="#carouselAtividadesMobile"
+                                data-bs-slide="prev">
+                                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                <span class="visually-hidden">Previous</span>
+                            </button>
+                            <button class="carousel-control-next" type="button" data-bs-target="#carouselAtividadesMobile"
+                                data-bs-slide="next">
+                                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                <span class="visually-hidden">Next</span>
+                            </button>
+                        </div>
+                    </div>
+                    <!--carrossel pequena e média-->
+                    <div class="col-7 p-0 d-block d-md-none d-lg-none d-xl-none carrossel">
+                        <div id="carouselAtividades" class="carousel slide">
+                            <div class="carousel-inner">
+                                <div class="carousel-item active">
+                                    <img src="./img/carrossel-mobile-1.png" class="d-block w-100" alt="Roda de Conversas">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="./img/carrossel-mobile-2.png" class="d-block w-100" alt="Fisioterapia">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="./img/carrossel-mobile-3.png" class="d-block w-100" alt="Sessões de Filmes">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="./img/carrossel-mobile-4.png" class="d-block w-100" alt="Jogos">
                                 </div>
                             </div>
                             <button class="carousel-control-prev" type="button" data-bs-target="#carouselAtividades"
