--- a/index.html
+++ b/index.html
@@ -21,10 +21,8 @@
             <a class="navbar-brand" href="index.html">
                 <img src="./img/logo.svg" alt="Logo" width="140" height="70">
             </a>
-            <button class="navbar-toggler rounded-circle fs-1" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                aria-label="Toggle navigation">
-                <span><i class="bi bi-list fs-2 text-white"></i></span>
+            <button class="navbar-toggler rounded-circle fs-1 p-2" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"> 
+                <span><i class="bi bi-list fs-1 text-white"></i></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav m-auto gap-0 gap-lg-3 p-3 p-lg-0 fs-5">
