--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg sticky-top bg-white shadow-sm">
+    <nav class="navbar navbar-expand-lg bg-white shadow-sm">
         <div class="container">
             <a class="navbar-brand" href="index.html">
                 <img src="./img/logo/logo.svg" alt="Logo" width="140" height="70">
@@ -44,7 +44,7 @@
                     </li>
                 </ul>
                 <div class="ms-lg-5 pb-3 pb-lg-0">
-                    <a class="btn btn-primary rounded-5 ps-4 pe-4 pt-2 pb-2 button border-0 fs-5" href="#"
+                    <a class="btn btn-primary rounded-5 ps-4 pe-4 pt-2 pb-2 button border-0 fs-5" href="#apoia"
                         role="button">Apoie o Grupo</a>
                 </div>
             </div>
@@ -80,7 +80,7 @@
                     <h1 class="h1-header display-3">Grupo de Idosos Viver Mais</h1>
                     <p class="p-home fs-5">Há duas décadas promovendo dignidade, autonomia e longevidade!</p>
                     <p class="p-home fs-5">Faça parte dessa história.</p>
-                    <a class="btn btn-lg rounded-5 ps-4 pe-4 pt-3 pb-3 button border-0 text-white" href=""
+                    <a class="btn btn-lg rounded-5 ps-4 pe-4 pt-3 pb-3 button border-0 text-white" href="#apoia"
                         role="button">Apoie o Grupo</a>
                 </div>
                 <div class="col pt-lg-5 mt-lg-2 pe-lg-0 me=lg-0 mt-0">
@@ -421,7 +421,7 @@
             </div>
         </section>
         <!--apoia-->
-        <section class="apoia mt-5 pt-4">
+        <section class="apoia mt-5 pt-4" id="apoia">
             <div class="row container-fluid align-items-end pe-0">
                 <div class="col-12 text-apoia col-md-6 py-4 mb-md-3 mb-0">
                     <h1 class="h1-apoia">Apoie o GIVM</h1>
